Enforce no-reserved-id-macro

--- a/cppcache/CMakeLists.txt
+++ b/cppcache/CMakeLists.txt
@@ -59,7 +59,7 @@ if ("SunOS" STREQUAL ${CMAKE_SYSTEM_NAME})
 elseif ("Linux" STREQUAL ${CMAKE_SYSTEM_NAME} )
   set( _LINUX 1 )
 elseif ("Darwin" STREQUAL ${CMAKE_SYSTEM_NAME} )
-  set( _MACOSX 1 )
+  set( MACOSX 1 )
 elseif ("Windows" STREQUAL ${CMAKE_SYSTEM_NAME} )
   set( _WIN32 1 )
 endif()
