--- a/cppcache/src/config.h.in
+++ b/cppcache/src/config.h.in
@@ -34,7 +34,7 @@
 
 // TODO replace with better CMake checks
 #cmakedefine _LINUX
-#cmakedefine _MACOSX
+#cmakedefine MACOSX
 // TODO already defined #cmakedefine _WIN32
 #cmakedefine _SOLARIS
 
@@ -52,7 +52,7 @@
 #define WITH_ACE_Select_Reactor 1
 
 // ACE_Thread is a pointer on MacOS *only*
-#if defined(_MACOSX)
+#if defined(MACOSX)
 #define ACE_Thread_NULL nullptr
 #else
 #define ACE_Thread_NULL 0
