--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -184,7 +184,7 @@ jobs:
     - name: cmake build
       run: cmake --build build/ --target javaobject -- -j2 && cmake --build build/ --target unit_test_callbacks -- -j2 && cmake --build build/ --target cppcache-integration-tests -- -j2
     - name: old integration tests
-      run: cd build/cppcache/integration-test/ && ctest --timeout 500 -L STABLE -C Debug -j1 --output-on-failure --schedule-random --repeat until-pass:3
+      run: cmake -E chdir build/cppcache/integration-test ctest --timeout 500 -C Debug -j1 --output-on-failure --schedule-random --repeat until-pass:3
 
   new-integration-test:
     runs-on: ${{ matrix.os }}
@@ -216,7 +216,7 @@ jobs:
     - name: cmake build
       run: cmake --build build/ --target cpp-integration-test -- -j2
     - name: new integration tests
-      run: cd build/cppcache/integration/test/ && ctest -E BasicIPv6Test -j2 --output-on-failure --schedule-random --repeat until-pass:3
+      run: cmake -E chdir build/cppcache/integration/test ctest -E BasicIPv6Test -j2 --output-on-failure --schedule-random --repeat until-pass:3
 
   build-and-test-ipv6:
     runs-on: ${{ matrix.os }}
@@ -248,7 +248,7 @@ jobs:
     - name: cmake build
       run: cmake --build build/ --target cpp-integration-test -- -j2
     - name: BasicIPv6Test
-      run: cd build/cppcache/integration/test/ && ctest -R BasicIPv6Test -j1 --output-on-failure
+      run: cmake -E chdir build/cppcache/integration/test ctest -R BasicIPv6Test -j1 --output-on-failure
 
   acceptance-test:
     runs-on: ${{ matrix.os }}
@@ -280,4 +280,4 @@ jobs:
     - name: cmake build
       run: cmake --build build/ --target cpp-acceptance-test -- -j2
     - name: acceptance tests
-      run: cd build/cppcache/acceptance-test/ && ctest -j1 --output-on-failure --schedule-random
+      run: cmake -E chdir build/cppcache/acceptance-test ctest -j1 --output-on-failure --schedule-random
