don't need to exclude ipv6 test cause it is disabled
though windows needs to say to build with it

Authored-by: M. Oleske <michael@oleske.engineer>

--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -106,7 +106,7 @@ jobs:
     - name: cmake build
       run: cmake --build build/ --target cpp-integration-test -- -j4
     - name: new integration tests
-      run: cmake -E chdir build/cppcache/integration/test ctest -E BasicIPv6Test -j2 --output-on-failure --schedule-random --repeat until-pass:3
+      run: cmake -E chdir build/cppcache/integration/test ctest -j2 --output-on-failure --schedule-random --repeat until-pass:3
 
   acceptance-test:
     runs-on: ${{ matrix.os }}
